force-app/main/default/objects/Student_In_Batch__c/Student_In_Batch__c.object-meta.xml
<CustomObject>
    <label>Student In Batch</label>
    <nameField>
        <displayFormat>SIB-{000}</displayFormat>
        <label>Student In Batch ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students In Batch</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>