force-app/main/default/objects/Student_In_Batch__c/fields/Remaining_Fees__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Fees__c</fullName>
    <formula>Batch__r.Course__r.Course_Fees__c - Student_Enrolled_In_Batch__r.Registration_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>