force-app/main/default/objects/Student_In_Batch__c/fields/Student_Enrolled_In_Batch__c.field-meta.xml
<CustomField>
    <fullName>Student_Enrolled_In_Batch__c</fullName>
    <label>Student Enrolled In Batch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Student__c.Student_Name__c</field>
            <operation>startsWith</operation>
            <value>G</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Students In Batch</relationshipLabel>
    <relationshipName>Students_In_Batch</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>