force-app/main/default/objects/Student_In_Batch__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <formula>Student_Enrolled_In_Batch__r.Student_Name__c</formula>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>