force-app/main/default/objects/Student_In_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Remaining_Fees__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>